JSP 도입
JavaServer Pages 도입. 매번 print.out 하는 방식에서, 출력할 문장들은 그대로 입력하고 java 코드 부분만 codelet <% %> 형태로 표현하는 방식.